Change plot colors, add to automateR

--- a/scripts/automateR/NAMESPACE
+++ b/scripts/automateR/NAMESPACE
@@ -17,3 +17,5 @@ export(signifDE)
 export(splitDE)
 export(txt2counts)
 export(volcano.plot)
+exportClasses(Overlap)
+exportClasses(ProximalGeneExp)
