Add GO term analysis plots

--- a/scripts/automateR/NAMESPACE
+++ b/scripts/automateR/NAMESPACE
@@ -19,3 +19,5 @@ export(txt2counts)
 export(volcano.plot)
 exportClasses(Overlap)
 exportClasses(ProximalGeneExp)
+exportMethods(get_proximal_genes)
+exportMethods(intersect_prox)
